# cmdcat

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
lib/: CMakeLists.txt  LibccatResource.cmake  cmdcat.h  config.h.in  connect.c  connection_status.md  exec.c  fork.c  utils.c  utils.h
lua/: cmdcat.lua
tests/: exec-test.cc  test-server.cc  test.sh
